user_management_commands_parser_test failing on DEBUG builders

XMLWordPrintableJSON

    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Run smokeCppUnittests on a DEBUG build since revision 92eaaca, applied to master on Friday Sept 13:

      92eaaca 2013-09-12 16:07 Spencer T Brody SERVER-6246 Implement grantRolesToUser command

      Test result:

       *******************************************
               Test : user_management_commands_parser_test ...
            Command : /home/kangas/workspace/mongo/build/linux2/dd/mongo/db/commands/user_management_commands_parser_test
               Date : Sun Sep 15 22:05:14 2013
      2013-09-15T22:05:14.130-0500 going to run suite: UserManagementCommandsParserTest
      2013-09-15T22:05:14.130-0500     going to run test: WriteConcernParsing
      2013-09-15T22:05:14.130-0500 FAIL: WriteConcernParsing  Expected "majority" == writeConcern["w"].str() (majority == ) @src/mongo/db/commands/user_management_commands_parser_test.cpp:61
      2013-09-15T22:05:14.130-0500     going to run test: CreateUserCommandParsing
      2013-09-15T22:05:14.132-0500     going to run test: UpdateUserCommandParsing
      2013-09-15T22:05:14.132-0500     going to run test: UserRoleManipulationCommandsParsing
      2013-09-15T22:05:14.132-0500 FAIL: UserRoleManipulationCommandsParsing  Expected 1 == writeConcern["w"].numberInt() (1 == 0) @src/mongo/db/commands/user_management_commands_parser_test.cpp:476
      2013-09-15T22:05:14.132-0500     DONE running tests
      2013-09-15T22:05:14.132-0500 **************************************************
      2013-09-15T22:05:14.132-0500 UserManagementCommandsParserTest | tests:    4 | fails:    2 | assert calls:     84
              WriteConcernParsing     Expected "majority" == writeConcern["w"].str() (majority == ) @src/mongo/db/commands/user_management_commands_parser_test.cpp:61
              UserRoleManipulationCommandsParsing     Expected 1 == writeConcern["w"].numberInt() (1 == 0) @src/mongo/db/commands/user_management_commands_parser_test.cpp:476
      2013-09-15T22:05:14.132-0500 TOTALS               | tests:    4 | fails:    2 | assert calls:     84
      _DEBUG warning trying to lock a mongo::mutex during static shutdown
      _DEBUG warning trying to lock a mongo::mutex during static shutdown
                         13.6261 ms
      test /home/kangas/workspace/mongo/build/linux2/dd/mongo/db/commands/user_management_commands_parser_test exited with status 17
      

      This failure is visible on the following MCI builders:

            Assignee:
            Spencer Brody (Inactive)
            Reporter:
            Matt Kangas (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: