SERVER-10774 Fix test by making sure parsed write concern object owns its memory