src/mongo/db/commands/user_management_commands_parser.cpp
@@ -42,7 +42,7 @@ namespace auth {
             }
             return status;
         }
-        *writeConcern = writeConcernElement.Obj();
+        *writeConcern = writeConcernElement.Obj().getOwned();;
         return Status::OK();
     }
 
